# Claude_Code_Boilerplate_Framework

./: .env.example  .gitignore  .gitmodules  .mcp.json  CLAUDE.md  CODEOWNERS  README.md  SPLINE_BUILD_GUIDE.md  package-lock.json  package.json  skills-lock.json
.claude/: settings.json  settings.local.json.example
.claude/agents/: memory-distiller.md
.claude/docs/: Claude_Code_Beginners_Guide.md  Claude_Code_Context_Management_Hacks.md  The_Shift_to_Agentic_AI_Workflows.md  (+4 more)
.github/: PULL_REQUEST_TEMPLATE.md
tools/: README.md  ffmpeg.js  playwright.js
tools/lightrag/: .env.example  .gitignore  README.md  check_update.py  provision.py  pyproject.toml  setup_backends.py  start_server.bat  test_lightrag.py
tools/lightrag-plus/: .env.example  .gitignore  README.md  provision.py  pyproject.toml  setup_backends.py
tools/lightrag-plus/schema/: supabase_schema.sql
tools/lightrag-plus/src/: config.py  lightrag_plus.py  server.py
tools/lightrag-plus/src/adapters/: __init__.py  pinecone_adapter.py  supabase_adapter.py
tools/lightrag-plus/src/embedders/: gemini_embedder.py  openai_embedder.py
tools/lightrag-plus/src/ingestors/: __init__.py  audio_ingestor.py  image_ingestor.py  video_ingestor.py
tools/lightrag-plus/tests/: conftest.py  test_integration.py
tools/lightrag/src/: __init__.py  config.py  lightrag_plus.py  server.py
tools/lightrag/src/adapters/: pinecone_adapter.py  supabase_adapter.py
tools/lightrag/src/embedders/: __init__.py  gemini_embedder.py
tools/lightrag/tests/: conftest.py  test_config.py  test_integration.py
workflows/: browser-automation.md  web-scraping.md
(+135 files in other folders)
